
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 1.1.2 [xx XXX xxxx]

  *) Recreate the OS390-Unix config target.  It no longer relies on a
     special script like it did for OpenSSL pre-1.1.0.
     [Richard Levitte]

  *) Instead of having the source directories listed in Configure, add
     a 'build.info' keyword SUBDIRS to indicate what sub-directories to
     look into.
     [Richard Levitte]

  *) Add GMAC to EVP_MAC.
     [Paul Dale]

  *) Ported the HMAC, CMAC and SipHash EVP_PKEY_METHODs to EVP_MAC.
     [Richard Levitte]

  *) Added EVP_MAC, an EVP layer MAC API, to simplify adding MAC
     implementations.  This includes a generic EVP_PKEY to EVP_MAC bridge,
     to facilitate the continued use of MACs through raw private keys in
     functionality such as EVP_DigestSign* and EVP_DigestVerify*.
     [Richard Levitte]     

  *) Deprecate ECDH_KDF_X9_62() and mark its replacement as internal. Users
     should use the EVP interface instead (EVP_PKEY_CTX_set_ecdh_kdf_type).
     [Antoine Salon]

  *) Added EVP_PKEY_ECDH_KDF_X9_63 and ecdh_KDF_X9_63() as replacements for
     the EVP_PKEY_ECDH_KDF_X9_62 KDF type and ECDH_KDF_X9_62(). The old names
     are retained for backwards compatibility.
     [Antoine Salon]

  *) AES-XTS mode now enforces that its two keys are different to mitigate
     the attacked described in "Efficient Instantiations of Tweakable
     Blockciphers and Refinements to Modes OCB and PMAC" by Phillip Rogaway.
     Details of this attack can be obtained from:
     http://web.cs.ucdavis.edu/%7Erogaway/papers/offsets.pdf
     [Paul Dale]

  *) Rename the object files, i.e. give them other names than in previous
     versions.  Their names now include the name of the final product, as